# OSS-Themis

./: .env.sample  .hintrc  CHANGES.md  CONFLUENCE.md  README.md  TODO.md  dump_page.py  escape.json  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
bcm/: alt_layout.py  confluence.py  context_export.py  database.py  html_export.py  markdown_export.py  models.py  settings.py  svg_export.py  word_export_alt.py
bcm-client/: package-lock.json  package.json  vite.config.ts
bcm-client/src/: App.tsx
bcm-client/src/api/: client.ts
bcm-client/src/components/: About.tsx  BurgerMenu.tsx  CapabilityTree.tsx  DraggableCapability.tsx  Settings.tsx  Visualize.tsx
bcm-client/src/contexts/: SettingsContext.tsx
bcm-client/src/types/: api.ts
bcm/api/: confluence.py  export_handler.py  io.py  server.py  settings.py  state.py  users.py  utilities.py
bcm/templates/: capability_expansion.j2  new_capability_expansion.j2
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
tests/: test_publish.py
